--- a/src/components/LiquidGlass.css
+++ b/src/components/LiquidGlass.css
@@ -1,40 +1,54 @@
+/* LIQUID GLASS STYLES */
+
 .wrapper {
+  display: flex;
+  gap: 25px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.liquidGlass-wrapper {
   position: relative;
-  border-radius: 2rem;
+  display: flex;
+  font-weight: 600;
   overflow: hidden;
-  box-shadow:
-    0 6px 6px #00000033,
-    0 0 20px #0000001a;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
 }
 
-.effect {
+.liquidGlass-effect {
   position: absolute;
   z-index: 0;
   inset: 0;
+
   backdrop-filter: blur(3px);
   filter: url(#glass-distortion);
   overflow: hidden;
+  isolation: isolate;
 }
 
-.tint {
+.liquidGlass-tint {
   z-index: 1;
   position: absolute;
   inset: 0;
-  background: #ffffff80;
+  background: rgba(0, 0, 0, 0.25);
 }
 
-.shine {
+.liquidGlass-shine {
   position: absolute;
   inset: 0;
   z-index: 2;
+
   overflow: hidden;
-  box-shadow:
-    inset 2px 2px 1px 0 #ffffff80,
-    inset -1px -1px 1px 1px #ffffff80;
+
+  box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.5),
+    inset -1px -1px 1px 1px rgba(255, 255, 255, 0.5);
 }
 
-.text {
+.liquidGlass-text {
   position: relative; 
   z-index: 3;
   color: rgb(255, 255, 255);
@@ -44,15 +58,20 @@
   flex-direction: column;
 }
 
-.text h2 {
+.liquidGlass-text h2 {
   display: flex;
   align-items: center;
   cursor: pointer;
   transition: color 0.3s ease;
 }
 
-.text h2:hover {
-    color: #d0d0d0;
+.liquidGlass-text h2:hover {
+    color: #979B97;
+}
+
+.sidenav,
+.sidenav > div {
+  border-radius: 2rem;
 }
 
 .sidenav:hover {
