--- a/src/components/LiquidGlass.css
+++ b/src/components/LiquidGlass.css
@@ -34,7 +34,7 @@
   z-index: 1;
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(255, 255, 255, 0.25);
 }
 
 .liquidGlass-shine {
@@ -44,8 +44,8 @@
 
   overflow: hidden;
 
-  box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.5),
-    inset -1px -1px 1px 1px rgba(255, 255, 255, 0.5);
+  box-shadow: inset 2px 2px 1px 0 rgba(18, 20, 31, 0.5),
+    inset -1px -1px 1px 1px rgba(150, 137, 103, 0.5);
 }
 
 .liquidGlass-text {
@@ -56,6 +56,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.sidenav .liquidGlass-text {
+  text-shadow:
+  1px 1px 2px rgba(150, 137, 103),
+  0 0 1em rgb(0, 0, 0),
+  0 0 0.2em rgba(18, 20, 31);
 }
 
 .liquidGlass-text h2 {
