--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 .material-symbols-outlined {
@@ -37,7 +38,8 @@ html, body, #root {
 }
 
 .sidenav {
-  width: 300px;
+  min-width: 300px;
+  max-width: 300px;
   padding: 40px;
   box-sizing: border-box;
   height: 100%;
