--- a/src/components/LiquidGlass.css
+++ b/src/components/LiquidGlass.css
@@ -6,28 +6,65 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
+  min-height: 100%;
+  pointer-events: none;
+  border-radius: 2rem;
+}
+
+.list-wrapper {
+  display: flex;
+  gap: 25px;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: flex-end;
+  overflow-y: auto;
+  pointer-events: none;
+  border-radius: 2rem;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
+}
+
+.list-wrapper:hover {
+  transform: scale(1.015);
+  border-radius: 2.5rem;
+}
+
+.stat-wrapper {
+  display: flex;
+  gap: 25px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  min-height: 100%;
+  pointer-events: none;
+  border-radius: 2rem;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
 }
 
 .liquidGlass-wrapper {
   position: relative;
   display: flex;
   font-weight: 600;
+  width: 100%;
   overflow: hidden;
   color: rgb(255, 255, 255);
-  cursor: pointer;
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
+  border-radius: 2rem;
+  pointer-events: none;
 }
 
 .liquidGlass-effect {
   position: absolute;
   z-index: 0;
   inset: 0;
+  border-radius: 2rem;
 
   backdrop-filter: blur(3px);
   filter: url(#glass-distortion);
   overflow: hidden;
   isolation: isolate;
+  pointer-events: none;
 }
 
 .liquidGlass-tint {
@@ -35,27 +72,58 @@
   position: absolute;
   inset: 0;
   background: rgba(255, 255, 255, 0.25);
+  pointer-events: none;
+  border-radius: 2rem;
 }
 
 .liquidGlass-shine {
   position: absolute;
   inset: 0;
   z-index: 2;
+  border-radius: 2rem;
 
   overflow: hidden;
 
+  box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.25),
+    inset -1px -1px 1px 1px rgba(255, 255, 255, 0.25);
+  pointer-events: none;
+}
+
+/* #sidenav-shine {
   box-shadow: inset 2px 2px 1px 0 rgba(18, 20, 31, 0.5),
     inset -1px -1px 1px 1px rgba(150, 137, 103, 0.5);
 }
 
+#stat1-shine {
+  box-shadow: inset 2px 2px 1px 0 rgba(18, 20, 31, 0.5),
+    inset -1px -1px 1px 1px rgba(150, 137, 103, 0.5);
+}
+
+#stat2-shine {
+  box-shadow: inset 2px 2px 1px 0 rgba(150, 137, 103, 0.5),
+    inset -1px -1px 1px 1px rgba(18, 20, 31, 0.5);
+}
+
+#stat3-shine {
+  box-shadow: inset 2px 2px 1px 0 rgba(18, 20, 31, 0.5),
+    inset -1px -1px 1px 1px rgba(86, 92, 127, 0.5);
+}
+
+#list-shine {
+  box-shadow: inset 2px 2px 1px 0 rgba(18, 20, 31, 0.5),
+    inset -1px -1px 1px 1px rgba(150, 137, 103, 0.5);
+} */
+
 .liquidGlass-text {
+  display: flex;
+  flex-direction: column;
   position: relative; 
   z-index: 3;
   color: rgb(255, 255, 255);
   box-sizing: border-box;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  min-height: 100%;
+  pointer-events: all;
+  border-radius: 2rem;
 }
 
 .sidenav .liquidGlass-text {
@@ -84,6 +152,11 @@
 .sidenav:hover {
   transform: scale(1.02);
   border-radius: 2.5rem;
+}
+
+.sidenav:hover .liquidGlass-text {
+  transform: scale(1.02);
+  transform-origin: center center;
 }
 
 .sidenav:hover>div {
