--- a/src/components/LiquidGlass.css
+++ b/src/components/LiquidGlass.css
@@ -9,6 +9,12 @@
   min-height: 100%;
   pointer-events: none;
   border-radius: 2rem;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
+}
+
+.wrapper:hover {
+  transform: scale(1.015);
+  border-radius: 2.5rem;
 }
 
 .list-wrapper {
@@ -27,7 +33,6 @@
 
 .list-wrapper:hover {
   transform: scale(1.015);
-  border-radius: 2.5rem;
 }
 
 .stat-wrapper {
@@ -73,7 +78,7 @@
   z-index: 1;
   position: absolute;
   inset: 0;
-  background: rgba(255, 255, 255, 0.25);
+  background: rgba(255, 255, 255, 0.15);
   pointer-events: none;
   border-radius: 2rem;
 }
@@ -89,6 +94,26 @@
   box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.25),
     inset -1px -1px 1px 1px rgba(255, 255, 255, 0.25);
   pointer-events: none;
+}
+
+.liquidGlass-shine::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 2rem;
+  box-shadow:
+  inset -10px -8px 0px -11px rgba(255, 255, 255, 1),  /* bottom right */
+  inset 0px -9px 0px -8px rgba(255, 255, 255, 1),      /* bottom */
+
+  inset 10px 8px 0px -11px rgba(255, 255, 255, 0.8),   /* top left */
+  inset 0px 9px 0px -8px rgba(255, 255, 255, 0.8);     /* top */
+  opacity: 0.6;
+  z-index: -1;
+  filter: blur(1px) drop-shadow(10px 4px 6px black) brightness(115%);
 }
 
 #sidenav-shine {
