--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,16 @@ html, body, #root {
   box-sizing: border-box;
   height: 100%;
   border-radius: 1.5rem;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
+}
+
+.sidenav a {
+  font-size: 1.5em;
+  font-weight: bold;
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  margin: 0.83em 0;
 }
 
 .logo {
