--- a/src/components/LiquidGlass.css
+++ b/src/components/LiquidGlass.css
@@ -159,21 +159,21 @@
   border-radius: 2rem;
 }
 
-.sidenav .liquidGlass-text {
+.sidenav {
   text-shadow:
   1px 1px 2px rgba(150, 137, 103),
   0 0 1em rgb(0, 0, 0),
   0 0 0.2em rgba(18, 20, 31);
 }
 
-.liquidGlass-text h2 {
+.liquidGlass-text h2, .liquidGlass-text a {
   display: flex;
   align-items: center;
   cursor: pointer;
   transition: color 0.3s ease;
 }
 
-.liquidGlass-text h2:hover {
+.liquidGlass-text h2:hover, .liquidGlass-text a:hover {
     color: #979B97;
 }
 
