Moved SideNav outside the App

--- a/src/components/LiquidGlass.css
+++ b/src/components/LiquidGlass.css
@@ -50,6 +50,7 @@
 .liquidGlass-wrapper {
   position: relative;
   display: flex;
+  flex-grow: 1;
   font-weight: 600;
   width: 100%;
   min-height: 100%;
