--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,29 @@ html, body, #root {
 }
 
 
+/* NOT FOUND PAGE STYLING */
+
+.not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.not-found-button {
+  display: flex;
+  position: unset;
+  width: fit-content;
+  gap: 18px;
+  align-items: center;
+  z-index: 1000;
+  background: #1d1f1d;
+  margin: 20px 30px;
+  padding: 12px 24px;
+  border-radius: 8px;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
