--- a/src/components/Launches.css
+++ b/src/components/Launches.css
@@ -85,6 +85,7 @@ tbody tr {
 }
 tbody tr:hover {
     background-color: rgba(255, 255, 255, 0.05);
+    cursor: pointer;
 }
 .mission-patch {
     width: 50px;
