--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,17 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
+
+body::before {
+  content: '';
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 4;
+  opacity: 0;
+  transition: opacity 0.7s ease-in-out;
+  pointer-events: none; 
+}
