--- a/src/App.css
+++ b/src/App.css
@@ -30,18 +30,17 @@ html, body, #root {
 .whole-page {
   display: flex;
   flex-direction: row;
+  flex: 1;
+  min-height: 100vh;
   gap: 2rem;
-  height: 100%;
-  width: 100%;
   padding: 2rem;
   box-sizing: border-box;
 }
 
 .sidenav {
-  min-width: 300px;
-  max-width: 300px;
+  width: 300px;
+  flex-shrink: 0;
   padding: 40px;
-  box-sizing: border-box;
   height: 100%;
   border-radius: 1.5rem;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
@@ -74,21 +73,13 @@ html, body, #root {
 
 /* DETAIL VIEW STYLES */
   .detail-view { 
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    height: fit-content;
     color: white; 
-    padding: 2rem; 
   }
-  .back-button { 
-    display: flex; 
-    align-items: center; 
-    background: rgba(255,255,255,0.2); 
-    border: 1px solid rgba(255,255,255,0.3); 
-    color: white; padding: 10px 20px; 
-    border-radius: 20px; 
-    cursor: pointer; 
-    font-weight: 600; 
-    font-size: small; 
-    margin-bottom: 2rem; 
-  }
+
   .detail-header { 
     display: flex; 
     gap: 3rem; 
@@ -96,15 +87,18 @@ html, body, #root {
     margin-bottom: 3rem; 
     margin-left: 2rem;
   }
+
   .detail-patch { 
     width: 150px; 
     height: 150px; 
   }
+
   .detail-tags { 
     display: flex; 
     gap: 0.5rem; 
     margin-top: 1rem; 
   }
+
   .tag-reused { 
     background-color: #3b82f6; 
     color: aliceblue;
@@ -113,51 +107,62 @@ html, body, #root {
     font-size: 0.8rem; 
     margin-left: 1rem;
   }
+
   .detail-stats-grid { 
     display: grid; 
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
     gap: 1.5rem; margin: 2rem 0; 
   }
+
   .detail-stat { width: 100%; 
     background: rgba(0,0,0,0.2); 
     padding: 2rem; 
     border-radius: 2rem; 
   }
+
   .detail-stat span:first-child { 
     display: block; 
     font-size: 0.9rem; 
     color: #ccc; 
     margin-bottom: 0.5rem; 
   }
+
   .detail-stat span:last-child { 
     font-size: 1.2rem; 
     font-weight: bold; 
   }
+
   .detail-description { 
     line-height: 1.6; 
   }
+
   .detail-links { 
     display: flex; 
     gap: 1rem; 
     margin-top: 1rem; 
   }
+
   .detail-link { 
     color: #87CEEB; 
     text-decoration: none; 
     font-weight: 500; 
   }
+
   .detail-link:hover { 
     color: #00b7ff 
   }
+
   .gallery { 
     margin-top: 2rem; 
   }
+
   .gallery-images { 
     display: flex; 
-    gap: 1.25%; 
+    row-gap: 1rem;
+    column-gap: 1.25%;
     flex-wrap: wrap;
-    padding-bottom: 1rem; 
   }
+
   .mission-image { 
     width: 19%;
     max-height: 20vh;
@@ -167,44 +172,49 @@ html, body, #root {
     flex-shrink: 1;
     transition: transform 0.4s ease-in-out, z-index 0.4s ease-in-out;
   }
+
   .mission-image:hover { 
+    object-fit: contain;
     transform: scale(1.5);
     transform-origin: bottom;
     border-radius: 12px;
     z-index: 5;
   }
+
   .mission-image:nth-child(5n+1):hover {
     transform-origin: bottom left;
   }
+
   .mission-image:nth-child(5n):hover {
     transform-origin: bottom right;
   }
+
   body:has(.mission-image:hover)::before {
     opacity: 1;
   }
 
 
-/* NOT FOUND PAGE STYLING */
-.not-found {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
+  /* NOT FOUND PAGE STYLING */
 
-.not-found-button {
-  display: flex;
-  position: unset;
-  width: fit-content;
-  gap: 18px;
-  align-items: center;
-  z-index: 1000;
-  background: #1d1f1d;
-  margin: 20px 30px;
-  padding: 12px 24px;
-  border-radius: 8px;
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-}
+  .not-found {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    min-width: 100%;
+    height: 100vh;
+  }
+
+  .not-found-button { 
+    display: flex; 
+    align-items: center; 
+    background: rgba(255,255,255,0.2); 
+    border: 1px solid rgba(255,255,255,0.3); 
+    color: white; padding: 10px 20px; 
+    border-radius: 20px; 
+    cursor: pointer; 
+    font-weight: 600; 
+    font-size: large; 
+    margin: 20px 30px;
+  }
